2001-05-24  Lauris Kaplinski  <lauris@ximian.com>

	* src/seltrans-handles.*: Make structs const

	* src/seltrans.*: Make view type variable, move it to
	header for adding GUI later

2001-05-23  Frank Felfe  <innerspace@iname.com>

	* src/desktop-snap.*: Implement circualr and list snapping

	* src/sp-item.*: New virtual function ::snappoints()

	* src/seltrans.c: New structure

	* src/sp-rect.c (sp_rect_snappointss): Implement

	* src/sp-ellipse.c (sp_ellipse_snappoints): Ditto

	* src/sp-text.c (sp_text_snappoints): Ditto

	* src/sp-image.c (sp_image_snappoints): Ditto
	
2001-05-18  Lauris Kaplinski  <lauris@ximian.com>

	* configure.in: Version 0.23 final

	* src/sp-gradient.c (sp_lg_fill): Do opacity

	* src/document-undo.c (sp_document_redo): Fixed bug in redoing
	order changes

2001-05-17  Lauris Kaplinski  <lauris@ximian.com>

	* src/toolbox.c (sp_maintoolbox_create): Show toolbox, if
	it already exists and reference sodipodi
	(sp_maintoolbox_close): Hide toolbox

	* glade/Makefile.am (glade_DATA): Added item.glade, item.c

	* configure.in: Version 0.23

	* src/dialogs/display-settings.h: New file

	* glade/Makefile.am (glade_DATA): Added display.glade, display.c

2001-05-06  Lauris Kaplinski  <lauris@ximian.com>

	* configure.in (use_arena): Added with-arena flag

	* acconfig.h: Added ARENA

2001-04-16  Jesus Bravo Alvarez  <jba@pobox.com>

	* configure.in: Added gl (Galician) to ALL_LINGUAS

2001-04-14  Lauris Kaplinski  <lauris@ximian.com>

	* everywhere (TM): Changed the basic structure of Reprs (they are
	not GtkObjects any more) and SPObjects (they have own list sequence
	instead of using GLists)

2001-04-06  Lauris Kaplinski  <lauris@ximian.com>

	* src/sp-item-group.c (sp_item_group_ungroup): New method

	* src/draw-context.c (set_to_accumulated): Transform path instead of
	setting initial transform, so clear transform does not do interesting
	things for freehand curves ;-)

2001-04-04  Lauris Kaplinski  <lauris@ximian.com>
